--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,8 +48,8 @@
   <ItemGroup>
      <Compile Include="Assets\BallScript.cs" />
      <Compile Include="Assets\BallScript2.cs" />
+     <Compile Include="Assets\BlackBall.cs" />
      <Compile Include="Assets\Score.cs" />
-     <Compile Include="Assets\Scoreboardcontroller.cs" />
      <Compile Include="Assets\Scripts\GameController.cs" />
      <Compile Include="Assets\Scripts\GameParent.cs" />
      <Compile Include="Assets\Scripts\GameStates\0StateOne.cs" />
@@ -59,6 +59,9 @@
      <Compile Include="Assets\Scripts\Interface\IGameObjectState.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\WhiteBallController.cs" />
+ <Reference Include="UnityEngine.Advertisements">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/UnityEngine.Advertisements.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
@@ -73,6 +76,9 @@
  </Reference>
  <Reference Include="UnityEngine.HoloLens">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.Purchasing">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityPurchasing/UnityEngine.Purchasing.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.VR">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
